[package]
name = "sysfilter_pruning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli = "0.26.1"
object = "0.28.3"
memmap = "0.7.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
